--- a/doc/install.txt
+++ b/doc/install.txt
@@ -16,6 +16,7 @@
 Setup
 - rename ./app/conf/app_env.php.example to app_env.php, edit settings (DB, Solr, etc)
 - rename ./app/conf/smarty.conf.example to smarty.conf, edit settings (display strings)
+- ensure that ./var/templates_c and ./var/cache are writable for your Apache process (under Debian: chmod -R www-data:www-data ./var/*)
 
 Apache configuration
 - make sure Apache follows symlinks (Options FollowSymLinks) so we can use mod_rewrite
