--- a/doc/install.txt
+++ b/doc/install.txt
@@ -15,9 +15,9 @@
  ================
 
 Setup
-- check out git://github.com/dekstop/view.git to ./external/view
-- rename ./app/conf/app_env.php.example to app_env.php, edit settings (DB, Solr, etc)
-- rename ./app/conf/display_vars.php.example to display_vars.php, edit settings (display strings)
+- clone git://github.com/dekstop/view.git to ./external/view
+- copy ./app/conf/app_env.php.example to app_env.php, edit settings (DB, Solr, etc)
+- copy ./app/conf/display_vars.php.example to display_vars.php, edit settings (display strings)
 
 Apache configuration
 - make sure Apache follows symlinks (Options FollowSymLinks) so we can use mod_rewrite
