--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,16 +1,15 @@
 2010-01-03 03:20:01
 
-View.php impl:
+- use numerical character entities in encoded feed markup as opposed to HTML entities
+  - http://feedvalidator.org/docs/error/UndefinedNamedEntity.html 
+  -> controller should be able to change View.php's escaping rules
 - get rid of all x->raw() calls in templates
 - TODO: unit tests for custom View.php renderers
 - TODO: HTML::sanitise/excerpt in combination with View.php means we double(/triple?)-escape HTML entities
   - TODO: when the above is fixed: re-evaluate if we need CDATA tags around feed title/content
-- TODO: convert header/footer includes to View.php fragments, once that is implemented, for html and feed
 - TODO: implement a replacement for Apache ErrorDocument that allows us to display templates (e.g. on 404), but still works on template errors (e.g. 503)
-- TODO: use git's subtree merges or submodules to include View.php instead of maintaining a separate copy (the former gets checked out automatically, while the latter makes it easier to commit back changes)
-  - current alternative: checkout View.php inside main project
 
-- make html and feed as valid as possible (atm: still need to encode ampersands which for some reason doesn't happen in the 'e' smarty modifier, which calls htmlentities)
+- make html and feed as valid as possible (quite hard when displaying arbitrary external markup...)
 
 URL generator class/routing
 - get relative request by stripping path elements in $_SERVER['SCRIPT_NAME'] from $_SERVER['REQUEST_URI']
